# Numerik-II

./: .gitignore  .pre-commit-config.yaml  pixi.toml  pyproject.toml
Exercise 01/: 1a.py  1a_code.typ  3d.py  3d_code.typ  main.typ  test.py
Exercise 02/: 3b.py  3d.py  Haotian_Khairul_Ning_Aoxing_02.typ  main.typ  test.typ
Exercise 03/: 3.py  Haotian_Khairul_Ning_Aoxing_03.typ  test.py
Exercise 04/: Exercise3 Omega1 .m  Exercise3 Optimal_Omega.m  Haotian_Khairul_Ning_Aoxing_03.typ
Exercise 05/: 2.ipynb  2.py  Haotian_Khairul_Ning_Aoxing_03.typ
Exercise 06/: Haotian_Khairul_Ning_Aoxing_03.typ  ex06_3.ipynb
Exercise 07/: Haotian_Khairul_Ning_Aoxing_03.typ  conf.typ  ex07_1.ipynb  ex07_2.ipynb  ex07_3.ipynb
Exercise 08/: Haotian_Khairul_Ning_Aoxing_03.typ  sheet08_3.ipynb
Exercise 09/: Haotian_Khairul_Ning_Aoxing_03.typ  sheet09_3.ipynb
Exercise 10/: Haotian_Khairul_Ning_Aoxing_03.typ  conf.typ
Exercise 11/: Haotian_Khairul_Ning_Aoxing_03.typ  sheet11_3.ipynb
