[project]
authors = [{ name = "Austin Lee", email = "Austin__Lee@outlook.com" }]
dependencies = []
description = "Add a short description here"
name = "Numerik-II"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
jupyterlab = ">=4.3.1,<5"
numpy = ">=2.1.3,<3"
matplotlib = ">=3.9.2,<4"
pre-commit = ">=4.0.1,<5"
scipy = ">=1.14.1,<2"
ruff = ">=0.8.1,<0.9"
pyright = ">=1.1.389,<2"
commitizen = ">=4.0.0,<5"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "D401", "COM812", "ISC001", "N802", "N806"]
